--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,11 @@ task clean(type: Delete) {
 
 ext {
     kotlinVersion = '1.4.10'
-    materialVersion = "1.3.0-alpha03"
-    navigationVersion = "2.3.0"
-    constraintLayoutVersion = "2.0.1"
-    recyclerViewVersion = "1.1.0"
-    retrofitVersion = "2.9.0"
+    materialVersion = '1.3.0-alpha03'
+    navigationVersion = '2.3.0'
+    constraintLayoutVersion = '2.0.1'
+    recyclerViewVersion = '1.1.0'
+    cardViewVersion ='1.0.0'
 
     supportLibVersion = '1.2.0'
     coreVersion = '1.3.2'
@@ -46,4 +46,14 @@ ext {
     timberVersion = '4.7.1'
 
     groupieVersion ='2.8.0'
+
+    retrofitVersion = '2.9.0'
+    picassoVersion = '2.71828'
+    picassoTransformationsVersion = '2.2.1'
+    okhttpVersion = '4.9.0'
+    loggingInterceptorVersion ='4.7.2'
+
+    rxKotlinVersion ='2.0.0'
+    rxAndroidVersion = '2.1.1'
+    rxJavaVersion = '2.2.17'
 }
