--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,8 @@ task clean(type: Delete) {
 ext {
     kotlinVersion = '1.4.10'
     materialVersion = '1.3.0-alpha03'
-    navigationVersion = '2.3.0'
-    constraintLayoutVersion = '2.0.1'
+    navigationVersion = '2.3.1'
+    constraintLayoutVersion = '2.0.2'
     recyclerViewVersion = '1.1.0'
     cardViewVersion ='1.0.0'
 
@@ -41,7 +41,7 @@ ext {
 
     runnerVersion = '1.3.0'
     rulesVersion = '1.0.1'
-    junitVersion = '4.13'
+    junitVersion = '4.13.1'
     espressoVersion = '3.3.0'
     timberVersion = '4.7.1'
 
@@ -51,9 +51,11 @@ ext {
     picassoVersion = '2.71828'
     picassoTransformationsVersion = '2.2.1'
     okhttpVersion = '4.9.0'
-    loggingInterceptorVersion ='4.7.2'
+    loggingInterceptorVersion ='4.8.1'
 
     rxKotlinVersion ='2.0.0'
     rxAndroidVersion = '2.1.1'
     rxJavaVersion = '2.2.17'
+
+    roomVersion = '2.2.5'
 }
